<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dummy_score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/dummy_time"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/checkpointLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLinearLayout"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/checkpoint_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/checkpointText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkpointLabel"
        android:gravity="center_horizontal"
        android:text="@string/dummy_location"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkpointText"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/distance_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceLabel"
        android:gravity="center_horizontal"
        android:text="@string/dummy_distance"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/giveUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceText"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onGiveUp"
        android:text="@string/giveup_button" />

</RelativeLayout>