<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <TextView
        android:id="@+id/textGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/time_up"
        android:textSize="56sp" />

    <TextView
        android:id="@+id/currentScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textGameOver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/score"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentScoreLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/dummy_value"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentScoreText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/highest"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highScoreLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/dummy_value"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highScoreText"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onReturn"
        android:text="@string/return_button" />

</RelativeLayout>